--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AppLab</title>
-    <link rel="stylesheet" href="../AppLab/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
@@ -417,6 +417,6 @@
             <p class="copyright">Copyright© Arifur Rahman Tushar 2019. All rights reserved</p>
         </div>
     </footer>
-    <script src="../AppLab/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
