--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <button class="blue-button">Try for free</button>
                 <button id="WDV-button">Watch demo video</button>
             </div>
-            <img class="phone" src="../AppLab/img/phone.png" alt="phone">
+            <img class="phone" src="img/phone.png" alt="phone">
         </div>
     </section>
     <section class="trusted-by">
@@ -55,14 +55,14 @@
         </div>
     </section>
     <section class="features-section">
-        <img id="feature-phone" src="../AppLab/img/feature-phone.png" alt="feature-phone">
+        <img id="feature-phone" src="img/feature-phone.png" alt="feature-phone">
         <div class="features">
             <h2 class="title">Awesome apps features</h2>
             <p class="paragraph">Increase productivity with a simple to-do app, app for managing your personal budgets.</p>
             <div class="list-of-features">
                 <div class="feature">
                     <div class="f-photo">
-                        <img src="../AppLab/img/speed.png" alt="">
+                        <img src="img/speed.png" alt="">
                     </div>
                     <div class="feature-desc">
                         <h5 class="advantage-title">Fast Perfomance</h5>
@@ -73,7 +73,7 @@
                 </div>
                 <div class="feature">
                     <div class="f-photo">
-                        <img src="../AppLab/img/prototyping.png" alt="">
+                        <img src="img/prototyping.png" alt="">
                     </div>
                     <div class="feature-desc">
                         <h5 class="advantage-title">Prototyping</h5>
@@ -84,7 +84,7 @@
                 </div>
                 <div class="feature">
                     <div class="f-photo">
-                        <img src="../AppLab/img/vector.png" alt="">
+                        <img src="img/vector.png" alt="">
                     </div>
                     <div class="feature-desc">
                         <h5 class="advantage-title">Vector Editing</h5>
@@ -112,28 +112,28 @@
             <div class="tile">
                 <div class="seen-part">
                     <h5 class="advantage-title">Automatic Payouts</h5>
-                    <img src="../AppLab/img/arrow-down-sign-to-navigate.svg" alt="">
+                    <img src="img/arrow-down-sign-to-navigate.svg" alt="">
                 </div>
                 <p class="advantage-desc">Get your blood tests delivered at home collect a sample from the news your blood tests.</p>
             </div>
             <div class="tile">
                 <div class="seen-part">
                     <h5 class="advantage-title">Network Effect</h5>
-                    <img src="../AppLab/img/arrow-down-sign-to-navigate.svg" alt="">
+                    <img src="img/arrow-down-sign-to-navigate.svg" alt="">
                 </div>
                 <p class="advantage-desc"></p>
             </div>
             <div class="tile">
                 <div class="seen-part">
                     <h5 class="advantage-title">Rewards Method</h5>
-                    <img src="../AppLab/img/arrow-down-sign-to-navigate.svg" alt="">
+                    <img src="img/arrow-down-sign-to-navigate.svg" alt="">
                 </div>
                 <p class="advantage-desc"></p>
             </div>
         </div>
     </section>
     <section class="integration">
-        <img src="../AppLab/img/integration.png" alt="">
+        <img src="img/integration.png" alt="">
         <div class="integration-desc">
             <h2 class="title">Designed & built by<br>the latest code<br>integration</h2>
             <p class="paragraph">The rise of mobile devices transforms the way we<br>
@@ -147,32 +147,32 @@
         <p class="paragraph">The rise of mobile devices transforms the way we consume information entirely and the world's most elevant channels such as Facebook.</p>
         <div class="advantages">
             <div class="advantage">
-                <div class="f-photo"><img src="../AppLab/img/web-design.png" alt=""></div>
+                <div class="f-photo"><img src="img/web-design.png" alt=""></div>
                 <h5 class="advantage-title">App Development</h5>
                 <p class="advantage-desc">Get your blood tests delivered at home collect a sample from the news your blood tests.</p>
             </div>
             <div class="advantage">
-                <div class="f-photo"><img src="../AppLab/img/trophy.png" alt=""></div>
+                <div class="f-photo"><img src="img/trophy.png" alt=""></div>
                 <h5 class="advantage-title">10 Times Award</h5>
                 <p class="advantage-desc">Get your blood tests delivered at home collect a sample from the news your blood tests.</p>
             </div>
             <div class="advantage">
-                <div class="f-photo"><img src="../AppLab/img/computer.png" alt=""></div>
+                <div class="f-photo"><img src="img/computer.png" alt=""></div>
                 <h5 class="advantage-title">Cloud Storage</h5>
                 <p class="advantage-desc">Get your blood tests delivered at home collect a sample from the news your blood tests.</p>
             </div>
             <div class="advantage">
-                <div class="f-photo"><img src="../AppLab/img/customer-support.png" alt=""></div>
+                <div class="f-photo"><img src="img/customer-support.png" alt=""></div>
                 <h5 class="advantage-title">Customization</h5>
                 <p class="advantage-desc">Get your blood tests delivered at home collect a sample from the news your blood tests.</p>
             </div>
             <div class="advantage">
-                <div class="f-photo"><img src="../AppLab/img/ui.png" alt=""></div>
+                <div class="f-photo"><img src="img/ui.png" alt=""></div>
                 <h5 class="advantage-title">UX Planning</h5>
                 <p class="advantage-desc">Get your blood tests delivered at home collect a sample from the news your blood tests.</p>
             </div>
             <div class="advantage">
-                <div class="f-photo"><img src="../AppLab/img/customer-service.png" alt=""></div>
+                <div class="f-photo"><img src="img/customer-service.png" alt=""></div>
                 <h5 class="advantage-title">Customer Support</h5>
                 <p class="advantage-desc">Get your blood tests delivered at home collect a sample from the news your blood tests.</p>
             </div>
@@ -184,29 +184,29 @@
             <p class="paragraph">The rise of mobile devices transforms the way we consume information entirely.</p>
             <div class="ultimates">
                 <div class="ultimate">
-                    <div class="f-photo"><img src="../AppLab/img/web-design.png" alt=""></div>
+                    <div class="f-photo"><img src="img/web-design.png" alt=""></div>
                     <h5 class="advantage-title">App Development</h5>
                     <p class="advantage-desc">Get your blood tests delivered at home collect a sample from the news your blood tests.</p>
                 </div>
                 <div class="ultimate">
-                    <div class="f-photo"><img src="../AppLab/img/ui.png" alt=""></div>
+                    <div class="f-photo"><img src="img/ui.png" alt=""></div>
                     <h5 class="advantage-title">UX Planning</h5>
                     <p class="advantage-desc">Get your blood tests delivered at home collect a sample from the news your blood tests.</p>
                 </div>
                 <div class="ultimate">
-                    <div class="f-photo"><img src="../AppLab/img/computer.png" alt=""></div>
+                    <div class="f-photo"><img src="img/computer.png" alt=""></div>
                     <h5 class="advantage-title">Cloud Storage</h5>
                     <p class="advantage-desc">Get your blood tests delivered at home collect a sample from the news your blood tests.</p>
                 </div>
                 <div class="ultimate">
-                    <div class="f-photo"><img src="../AppLab/img/customer-service.png" alt=""></div>
+                    <div class="f-photo"><img src="img/customer-service.png" alt=""></div>
                     <h5 class="advantage-title">Customer Support</h5>
                     <p class="advantage-desc">Get your blood tests delivered at home collect a sample from the news your blood tests.</p>
                 </div>
             </div>
             <button class="blue-button">See all</button>
         </div>
-        <img class="ultimate-phone" src="../AppLab/img/ultimatephone.png" alt="">
+        <img class="ultimate-phone" src="img/ultimatephone.png" alt="">
     </section>
     <section class="pay-plans">
         <h2 class="title">Get awesome features, without extra charges</h2>
@@ -339,7 +339,7 @@
                 <div class="wrapper">
                     <div class="question-content">
                         <h3 class="question-name">How to contact with riders emergency?</h3>
-                        <img src="../AppLab/img/Plus.png" alt="">
+                        <img src="img/Plus.png" alt="">
                     </div>
                     <p class="question-answer">Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
                 </div>
@@ -348,7 +348,7 @@
                 <div class="wrapper">
                     <div class="question-content">
                         <h3 class="question-name">App installation failed, how to update system information?</h3>
-                        <img src="../AppLab/img/Plus.png" alt="">
+                        <img src="img/Plus.png" alt="">
                     </div>
                     <p class="question-answer"></p>
                 </div>
@@ -357,7 +357,7 @@
                 <div class="wrapper">
                     <div class="question-content">
                         <h3 class="question-name">Website reponse taking time, how to improve?</h3>
-                        <img src="../AppLab/img/Plus.png" alt="">
+                        <img src="img/Plus.png" alt="">
                     </div>
                     <p class="question-answer"></p>
                 </div>
@@ -366,7 +366,7 @@
                 <div class="wrapper">
                     <div class="question-content">
                         <h3 class="question-name">New update fixed all bug and issues?</h3>
-                        <img src="../AppLab/img/Plus.png" alt="">
+                        <img src="img/Plus.png" alt="">
                     </div>
                     <p class="question-answer"></p>
                 </div>
@@ -375,7 +375,7 @@
                 <div class="wrapper">
                     <div class="question-content">
                         <h3 class="question-name">How to contact with riders emergency?</h3>
-                        <img src="../AppLab/img/Plus.png" alt="">
+                        <img src="img/Plus.png" alt="">
                     </div>
                     <p class="question-answer"></p>
                 </div>
@@ -387,11 +387,11 @@
             <h1 id="download-title">Download our App now</h1>
             <p class="paragraph">The rise of mobile devices transforms the way we consume information entirely and the world's most elevant channels such as Facebook.</p>
             <div class="links">
-                <img src="../AppLab/img/en_badge_web_generic.png" alt="">
-                <img src="../AppLab/img/download-on-the-app-store-apple.png" alt="">
+                <img src="img/en_badge_web_generic.png" alt="">
+                <img src="img/download-on-the-app-store-apple.png" alt="">
             </div>
         </div>
-        <img src="../AppLab/img/download.png" alt="">
+        <img src="img/download.png" alt="">
     </section>
     <footer>
         <div class="footer-container">
@@ -408,10 +408,10 @@
                 </ul>
             </nav>
             <div class="icons">
-                <img src="../AppLab/img/facebook.svg" alt="">
-                <img src="../AppLab/img/twitter.svg" alt="">
-                <img src="../AppLab/img/hashtag.svg" alt="">
-                <img src="../AppLab/img/github.svg" alt="">
+                <img src="img/facebook.svg" alt="">
+                <img src="img/twitter.svg" alt="">
+                <img src="img/hashtag.svg" alt="">
+                <img src="img/github.svg" alt="">
             </div>
 
             <p class="copyright">Copyright© Arifur Rahman Tushar 2019. All rights reserved</p>
